# WirelessSpeaker

./: .clang-format  .config  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  ext.cpp  ext.hpp  main.cpp
.github/workflows/: builder.yml  c-cpp.yml  cpp.yml  doc.yml  docker.yml  formatter_c_cpp.yml  formatter_py.yml  merger.yml  py.yml  releaser.yml  tester.yml
.github/workflows/builds/: builder.yml  doc.yml  docker.yml
.github/workflows/formats/: cpp.yml  py.yml
.github/workflows/tests/: tester.yml
I2C/: Addresses.hpp  README.md
I2C/DeviceHeader/: DS1882.hpp  MCP9808.hpp
I2C/Devices/AT42QT1244/: AT42AT1244.cpp  AT42QT1244.hpp
I2C/Devices/DS1882/: DS1882.hpp
I2C/Devices/MCP9808/: MCP9808.cpp  MCP9808.hpp
SPI/: README.md
UPNP/: README.md
USB/: README.md
UpSampler/: README.md
data/: license
default/config/: config.toml
default/header/: header.toml
docker/: dockerfile  entrypoint.sh
hardware/design_data/filters/: MFB_Bass.qsch  MFB_High.qsch  RC_7Hz_HP.qsch  (+3 more)
inc/utils/: term_color.hpp
scripts/: deploy.sh  install-dev.sh  install.sh  update.sh
src/: CMakeLists.txt  main.cpp
src/Drivers/Devices/: Devices.hpp
src/Drivers/Devices/ADS1015/: ADS1015.cpp  ADS1015.hpp
src/Drivers/Devices/AT42QT1070/: AT42QT1070.cpp  AT42QT1070.hpp
src/Drivers/Devices/DS1882/: DS1882.cpp  DS1882.hpp
src/Drivers/Devices/INA219/: INA219.cpp  INA219.hpp
src/Drivers/Devices/M95256/: M95256.cpp  M95256.hpp
src/Drivers/Devices/MCP23009/: MCP23009.cpp  MCP23009.hpp
src/Drivers/Devices/MCP45HV51/: MCP45HV51.cpp  MCP45HV51.hpp
src/Drivers/Devices/MCP9808/: MCP9808.cpp  MCP9808.hpp
src/Drivers/Devices/PCA9633/: PCA9633.cpp  PCA9633.hpp
src/Drivers/Devices/PCM5252/: PCM5252.cpp  PCM5252.hpp
src/Drivers/Devices/STUBS4500/: STUSB4500.cpp  STUSB4500.hpp
src/Drivers/GPIO/: GPIO.cpp  GPIO.hpp  GPIO_Engine.cpp  GPIO_Engine.hpp
src/Drivers/GPIO/includes/: EDIT  clk.cpp  clk.hpp
src/Drivers/I2C/: I2C.hpp  I2C_Engine.cpp  I2C_Engine.hpp
src/Drivers/I2C/Devices/AT42QT1070/: AT42QT1070.hpp
src/Drivers/I2C/Devices/MCP9808/: MCP9808.hpp
src/Drivers/I2C/includes/: EDIT  smbus.cpp  smbus.h
src/Drivers/SPI/: SPI.hpp  SPI_Engine.cpp  SPI_Engine.hpp
src/Drivers/SPI/structs/: Struct.hpp  StructV1.hpp
src/Drivers/SPI/structs/audio/: struct_audio.hpp  struct_audio_elements.hpp
src/Drivers/SPI/structs/interfaces/: struct_automated_interfaces.hpp  struct_internal.hpp  struct_user_interfaces.hpp
src/Drivers/UART/: UART.cpp  UART.hpp  UART_Engine.cpp  UART_Engine.hpp
src/Drivers/USB/: USB.cpp  USB.hpp  USB_Engine.cpp  USB_Engine.hpp
src/GPIO/: README.md
src/I2C/: Addresses.hpp  I2C.hpp  I2C_Engine.cpp  I2C_Engine.hpp
src/I2C/Devices/ADS1015/: ADS1015.cpp  ADS1015.hpp
src/I2C/Devices/AT42QT1070/: AT42QT1070.cpp  AT42QT1070.hpp
src/I2C/Devices/AT42QT1244/: AT42QT1244.cpp  AT42QT1244.hpp
src/I2C/Devices/DS1882/: DS1882.cpp  DS1882.hpp
src/I2C/Devices/MCP45HV51/: MCP45HV51.cpp  MCP45HV51.hpp
src/I2C/Devices/MCP9808/: MCP9808.cpp  MCP9808.hpp
src/I2C/Devices/PCA9633/: PCA9633.cpp  PCA9633.hpp
src/I2C/Devices/PCM5252/: PCM5252.cpp  PCM5252.hpp
src/I2C/Devices/TLA2528/: TLA2528.cpp  TLA2528.hpp
src/I2C/Engine/: I2C_Engine.cpp  README.md
src/I2S/: I2S.hpp  README.md
src/Modules/EEPROM/: EEPROM_README.md  eeprom.cpp  eeprom.hpp  header.hpp  reader.cpp  updater.cpp  writter.cpp
src/Modules/EEPROM/address/: address.cpp  address.hpp
src/Modules/EEPROM/config/: config.hpp
src/Modules/EEPROM/config/audio/: struct_audio.hpp  struct_audio_elements.hpp
src/Modules/EEPROM/config/interfaces/: struct_automated_interfaces.hpp  struct_user_interfaces.hpp
src/Modules/EEPROM/dsp_profile/: dsp_profile.cpp  dsp_profile.hpp
src/Modules/EEPROM/header/: header.hpp  header_v1_default.hpp
src/Modules/EEPROM/structs/: StructV1.hpp  config_v1_default.hpp
src/Modules/EEPROM/structs/audio/: struct_audio.hpp  struct_audio_elements.hpp  struct_dsp_profile.hpp
src/Modules/EEPROM/structs/interfaces/: struct_automated_interfaces.hpp
src/Modules/Temperature/: Temperature.cpp
src/Modules/libcrc/: EDIT  LIBCRC_README.md  crc16.c  crc32.c  crc64.c  crc8.c  crcccitt.c  crcdnp.c  crckrmit.c  crcsick.c  nmea-chk.c  precalc.c
src/SPI/: SPI.hpp
src/drivers/: CMakeLists.txt
src/drivers/devices/: CMakeLists.txt
src/drivers/devices/ADS1015/: ADS1015.cpp  CMakeLists.txt
src/drivers/devices/AT42QT1070/: AT42QT1070.cpp  CMakeLists.txt
src/drivers/devices/DS1882/: CMakeLists.txt  DS1882.cpp
src/drivers/devices/INA219/: CMakeLists.txt  INA219.cpp  TEST_INA219.cpp
src/drivers/devices/M95256/: CMakeLists.txt  M95256.cpp
src/drivers/devices/MCP23009/: CMakeLists.txt  MCP23009.cpp
src/drivers/devices/MCP45HV51/: CMakeLists.txt  MCP45HV51.cpp
src/drivers/devices/MCP9808/: CMakeLists.txt  MCP9808.cpp  TEST_MCP9808.cpp
src/drivers/devices/PCA9633/: CMakeLists.txt  PCA9633.cpp
src/drivers/devices/PCM5252/: CMakeLists.txt  PCM5252.cpp
src/drivers/devices/STUSB4500/: CMakeLists.txt  STUSB4500.cpp
src/drivers/peripherals/: CMakeLists.txt
src/drivers/peripherals/gpio/: CMakeLists.txt  gpio.cpp
src/drivers/peripherals/gpio/includes/: clk.cpp
src/drivers/peripherals/i2c/: CMakeLists.txt  i2c.cpp
src/drivers/peripherals/i2c/includes/: smbus.cpp
src/drivers/peripherals/spi/: CMakeLists.txt  spi.cpp
src/drivers/peripherals/uart/: CMakeLists.txt  uart.cpp
src/drivers/peripherals/usb/: CMakeLists.txt
src/drivers/usb/: USB.cpp
src/modules/: CMakeLists.txt
src/modules/eeprom/: CMakeLists.txt  eeprom.cpp
src/modules/eeprom/dsp_profile/: dsp_profile.cpp
src/modules/libcrc/: CMakeLists.txt  EDIT  crc16.c  crc32.c  crc64.c  crc8.c  crcccitt.c  crcdnp.c  crckrmit.c  crcsick.c  nmea-chk.c
tests/: CMakeLists.txt  tester.cpp  todo_tests.md
tools/: HL-WirelessSpeakerV1.txt  Heywang-WirelessSpeakerV1.txt
tools/device-tree/: Heywang-WirelessSpeakerV1.dtb  Makefile  WirelessSpeakerV1.dts
tools/eeprom/: Makefile  eeprom_settings.txt  hat.eep
tools/electronic-design-tools/: SpicePlotter.py  filter.py  requirements.txt
(+36 files in other folders)
